<resources>
    <string name="app_name">homework</string>
    <string name="hello_kim">Hello, Kim!</string>
    <string name="continue_to">Continue to</string>
    <string name="mobile_dev_course">Mobile Dev.Course</string>
    <string name="_65_complete">65% Complete</string>
    <string name="popular_course">Popular Course</string>
    <string name="see_all">see All</string>
    <string name="search">search...</string>
    <string name="home">Home</string>
    <string name="province">Province</string>
    <string name="Search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>