<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="391dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/hello_kim"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="230dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/profile" />
        </LinearLayout>

        <SearchView
            android:layout_gravity="center_horizontal"
            android:id="@+id/searchView"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/search_view_rounded"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search"/>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:id="@+id/linearLayout2"
            android:layout_width="365dp"
            android:layout_height="300dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/container_rounded"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="60dp">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continue_to"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text1"
                    android:layout_marginTop="5dp"
                    android:text="@string/mobile_dev_course"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text2"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/custom_progress_bar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/progressBar"
                    android:text="@string/_65_complete"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="140dp"
                android:layout_height="180dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/fe" />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:id="@+id/linearLayout3"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginTop="470dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_course"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="120dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <HorizontalScrollView
            android:padding="10dp"
            android:layout_marginTop="500dp"
            android:layout_width="match_parent"
            android:layout_height="260dp">

            <LinearLayout
                android:layout_width="391dp"
                android:layout_height="260dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="8dp"
                    android:layout_width="150dp"
                    android:background="@drawable/container_rounded"
                    android:layout_height="190dp">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/fe"/>

                    <TextView
                        android:layout_marginLeft="35dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Software"
                        android:textSize="17sp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_marginLeft="25dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Engineering"
                        android:textSize="17sp"
                        android:textColor="@color/white"/>


                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="8dp"
                    android:layout_width="150dp"
                    android:background="@drawable/container_rounded"
                    android:layout_height="190dp">

                    <ImageView
                        android:id="@+id/image1"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/fe"/>

                    <TextView
                        android:layout_marginLeft="18dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="web and cloud"
                        android:textSize="17sp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_marginLeft="25dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Technologies"
                        android:textSize="17sp"
                        android:textColor="@color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="8dp"
                    android:layout_width="150dp"
                    android:background="@drawable/container_rounded"
                    android:layout_height="190dp">

                    <ImageView
                        android:id="@+id/image2"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/fe"/>

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Computer"
                        android:textSize="17sp"
                        android:textColor="@color/white"/>

                </LinearLayout>


            </LinearLayout>


        </HorizontalScrollView>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="750dp"
            android:orientation="horizontal"
            android:layout_width="360dp"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textSize="26sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="All Course"/>

            <Space
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:textStyle="bold"
                android:textSize="26sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="See All"/>

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="800dp"
            android:orientation="vertical"
            android:layout_width="400dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:gravity="center_vertical"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:background="@color/black"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/fe"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mobile Application Dev.I"/>

                    <LinearLayout
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Explore thhe power of android"/>

                        <ImageView
                            android:layout_marginLeft="80dp"
                            android:layout_width="25dp"
                            android:layout_height="20dp"
                            android:src="@drawable/baseline_newspaper_24"/>
                    </LinearLayout>

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="application ddevelopment"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:gravity="center_vertical"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:background="@color/black"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/fe"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mobile Application Dev.I"/>

                    <LinearLayout
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Explore thhe power of android"/>

                        <ImageView
                            android:layout_marginLeft="80dp"
                            android:layout_width="25dp"
                            android:layout_height="20dp"
                            android:src="@drawable/baseline_newspaper_24"/>
                    </LinearLayout>

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="application ddevelopment"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</ScrollView>
